# funpay-client

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: basic_polling.rs  custom_config.rs
src/: config.rs  error.rs  events.rs  lib.rs  utils.rs
src/client/: account.rs  http.rs  mod.rs  poller.rs  urls.rs
src/models/: enums.rs  ids.rs  mod.rs
src/parsing/: category.rs  forms.rs  locales.rs  message.rs  mod.rs  offers.rs  orders.rs
src/storage/: json.rs  memory.rs  mod.rs
