[package]
name = "funpay-client"
version = "0.2.1"
edition = "2021"
description = "Unofficial async client for FunPay marketplace - chats, orders, offers polling"
license = "WTFPL"
keywords = ["funpay", "client", "async", "http", "scraper"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.84"
readme = "README.md"
repository = "https://github.com/anthropics/funpay-client"
documentation = "https://docs.rs/funpay-client"
exclude = [
    "target/",
    ".git/",
    ".vscode/",
    ".idea/",
    ".claude/",
    "*.swp",
    "*.swo",
]

[features]
default = ["json-storage"]
json-storage = []
full = ["json-storage"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "fs"] }
log = "0.4"
serde_json = "1.0"
scraper = "0.20"
urlencoding = "2.1"
thiserror = "1.0"
once_cell = "1.19"
regex = "1.10"
rand = "0.8"
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
env_logger = "0.11"


